# skyway_for_ros-release

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  skyway_plugin.xml  tracks.yaml
.github/workflows/: release_library.yml
debian/: changelog  control  copyright  gbp.conf  rules
doc/: data_connect.md  data_event.md  data_redirect.md  event_request.md  media_answer.md  media_call.md  media_event.md  peer_create.md  peer_event.md  peer_status.md  plugin.md  tips.md
doc/img/: component.puml  component.xml  sequence_connect_datachannel.puml  sequence_create_peer.puml  sequence_data_flow.puml  sequence_data_redirect.puml  sequence_media_answer.puml  sequence_media_call.puml  sequence_media_flow.puml  sequence_peer_status.puml
examples/: README.md
examples/gstreamer_launcher/: CMakeLists.txt  package.xml
examples/gstreamer_launcher/scripts/: main.py
examples/gstreamer_launcher/srv/: GStreamerLauncher.srv
include/skyway/: binary_loopback.h  json_loopback.h  skyway_plugin.h  string_loopback.h  string_pub_sub.h
rust_module/: Cargo.toml
rust_module/src/: di.rs  error.rs  lib.rs  utils.rs
rust_module/src/application/: factory.rs  mod.rs
rust_module/src/application/dto/: mod.rs  request.rs  response.rs
rust_module/src/application/usecase/: mod.rs
rust_module/src/application/usecase/data/: connect.rs  mod.rs  redirect.rs
rust_module/src/application/usecase/event/: data.rs  media.rs  mod.rs  peer.rs
rust_module/src/application/usecase/general/: mod.rs  service.rs
rust_module/src/application/usecase/media/: answer.rs  call.rs  mod.rs
rust_module/src/application/usecase/peer/: create.rs  mod.rs
rust_module/src/application/usecase/system/: mod.rs
rust_module/src/domain/: repository.rs
rust_module/src/domain/entity/: mod.rs  request.rs  response.rs
rust_module/src/ffi/: c_to_rust_bridge.rs  mod.rs
rust_module/src/ffi/rust_to_c_bridge/: c_functions_wrapper.rs  mod.rs  state_objects.rs
rust_module/src/infra/: mod.rs
src/: ffi.cpp  ffi.h  ffi_bridge.cpp  ffi_bridge.h  main.cpp  router.cpp  router.h
src/plugin/: skyway_plugin.cpp
src/plugin/samples/: binary_loopback.cpp  json_loopback.cpp  string_loopback.cpp  string_pub_sub.cpp
src/plugin_router/: binary_plugin_router.cpp  binary_plugin_router.h  json_plugin_router.cpp  json_plugin_router.h  plugin_router.h  plugin_router_factory.cpp  plugin_router_factory.h  string_plugin_router.cpp  string_plugin_router.h
src/presentation/: control_service.cpp  control_service.h  events_service.cpp  events_service.h
src/socket/: socket.h  udp_socket.cpp  udp_socket.h
test/: test_main.cpp  unit_test.test
test/plugin_router/: binary_plugin_router_test.cpp  json_plugin_router_test.cpp  plugin_router_factory_test.cpp  string_plugin_router_test.cpp
test/socket/: udp_socket_test.cpp
