<?xml version="1.0"?>
<package format="2">
  <name>skyway</name>
  <version>0.0.2</version>
  <description>Package for using SkyWay from ROS</description>
  <maintainer email="t.nakakura@ntt.com">Toshiya Nakakura</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/ntt-t3/skyway_for_ros</url>
  <author email="t.nakakura@ntt.com">Toshiya Nakakura</author>

  <depend>pluginlib</depend>
  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>rostest</test_depend>

  <export>
    <skyway plugin="${prefix}/skyway_plugin.xml" />
  </export>
</package>
